--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-/* .person1 {
-  text-align: left;
+.titlu {
+  text-align: center;
 }
 
-.person2 {
-  text-align: right
-} */
+.tot {
+  margin-top: 200 !important;
+}
